<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="article_text">Imagine this is the landing page</string>
    <string name="content_text">Content (mandatory)</string>
    <string name="article_image">Image Selector</string>
    <string name="title_name">Title Name (mandatory)</string>
    <string name="image_text">Title Selector</string>
    <string name="title_text">Title</string>
    <string name="new_post_title">Create A New Post</string>
    <string name="edit_post_title">Edit Article</string>
    <string name="post_text">Post</string>
    <string name="cancel_text">Cancel</string>
    <string name="comms_text">This is communication fragment</string>
    <string name="comms_category">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="comms_category_label">COVID-19</string>
    <string name="iv_thumbnail_desc">thumbnail</string>
    <string name="no_articles_found">No Articles found</string>
    <string name="highlighted_text">Highlighted</string>
    <string name="create_article_fragment_title">Create Article</string>
    <string name="comms_landing_fragment_title">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_article">Edit Article</string>
    <string name="delete_article">Delete Article</string>
    <string name="slack_text">Slack</string>
</resources>